// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Del checkGrammar=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del checkGrammar=true 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del checkHighlight=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del checkHighlight=true 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del checkSpaces=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del checkSpaces=true 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del className="my-classname" 1`] = `
<del
  className="uu5-bricks-del my-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del content="This is Content from ContentMixin" 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</del>
`;

exports[`UU5.Bricks.Del content=12345 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
>
  12345
</del>
`;

exports[`UU5.Bricks.Del controlled=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del controlled=true 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del default props 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del disabled=false 1`] = `
<del
  className="uu5-bricks-del"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del disabled=true 1`] = `
<del
  className="uu5-bricks-del"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del dynamic=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del dynamic=true 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del example docKit UU5.Bricks.Del render without crash 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID01"
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is "
  />
  <Del
    id="uuID02"
    nestingLevel="page"
  >
    deleted
  </Del>
  <UU5.Common.TextCorrectorContextConsumer
    key="2"
    text="text"
  />
</p>
`;

exports[`UU5.Bricks.Del hidden=false 1`] = `
<del
  className="uu5-bricks-del"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del hidden=true 1`] = `
<del
  className="uu5-bricks-del"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del id="myId" 1`] = `
<del
  className="uu5-bricks-del"
  id="myId"
/>
`;

exports[`UU5.Bricks.Del ignoreHTML=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del ignoreHTML=true 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del mainAttrs=undefined 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del name="myName" 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del noIndex=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del noIndex=true 1`] = `
<del
  className="uu5-bricks-del uu5-noindex"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del selected=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del selected=true 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del style="padding:8px; borderRadius: 2px" 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.Del style={"backgroundColor":"red","color":"blue"} 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Del textCorrector=false 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del textCorrector=true 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Del tooltip="My Tooltip" 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
/>
`;
